# telegram-vector-memory-bot

./: .env.example  .gitignore  README.md  pyproject.toml
hay_v2_bot/: __init__.py  __main__.py  config.py  main.py
hay_v2_bot/adapters/: __init__.py  docling_adapter.py
hay_v2_bot/bot/: __init__.py  handlers.py  messages.py  runtime.py
hay_v2_bot/components/: __init__.py  context.py
hay_v2_bot/models/: __init__.py  conversion.py  documents.py  rag.py
hay_v2_bot/pipelines/: __init__.py  factory.py
hay_v2_bot/services/: __init__.py  document_rag.py
hay_v2_bot/storage/: __init__.py  identifiers.py  namespaces.py  pinecone.py
scripts/: calibrate_similarity.py  smoke_test_docling.py  smoke_test_document_rag.py  smoke_test_memory.py  smoke_test_tools.py
src/telegram_vector_memory_bot/: __init__.py  bot.py  chat_service.py  config.py  haystack_agent.py  memory_policy.py  memory_service.py  models.py  pinecone_manager.py  tools.py
tests/: test_bot.py  test_chat_service.py  test_config.py  test_haystack_agent.py  test_live_scripts.py  test_memory_policy.py  test_memory_service.py  test_models.py  test_pinecone_manager.py  test_tools.py
tests/hay_v2_bot/: __init__.py  test_bot_handlers.py  test_bot_messages.py  test_bot_runtime.py  test_dependency_compatibility.py  test_docling_adapter.py  test_docling_smoke_script.py  test_document_contracts.py  test_document_rag_service.py  test_document_rag_smoke_script.py  test_document_storage_identity.py  test_pipeline_factory.py  test_rag_config.py  test_v2_config.py
